[package]
name = "pmdr"
version = "0.3.0"
authors = ["shockham <samuel.hockham@gmail.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
repository = "https://github.com/shockham/pmdr"
homepage = "https://github.com/shockham/pmdr"
documentation = "https://docs.rs/pmdr"
description = "Minimal pomodoro timer with no deps"

[dependencies]
